--- a/input.streams.html
+++ b/input.streams.html
@@ -480,8 +480,7 @@ Otherwise, the function calls
 basic_istream&lt;charT, traits&gt;&amp; operator&gt;&gt;
   (basic_streambuf&lt;charT, traits&gt;* sb);
 </code></p><div class='itemdescr'></div><div class='para' id='istream.extractors-14'><div class='marginalizedparent'><a class='marginalized' href='#istream.extractors-14'>14</a></div><div class='itemdescr'><p ><i>Effects:</i>
-Behaves as an unformatted input function (as described
-in <a href='istream.unformatted'>[istream.unformatted]</a>, paragraph 1).
+Behaves as an unformatted input function (<a href='istream.unformatted'>[istream.unformatted]</a>).
 If <span class='texttt'>sb</span> is null, calls
 <span class='texttt'>setstate(failbit)</span>,
 which may throw
@@ -557,14 +556,14 @@ streamsize gcount() const;
 </code></p></div><div class='itemdescr'></div><div class='para' id='istream.unformatted-2'><div class='marginalizedparent'><a class='marginalized' href='#istream.unformatted-2'>2</a></div><div class='itemdescr'><p ><i>Effects:</i>
 None.
 This member function does not behave as an unformatted
-input function (as described in <a href='istream.unformatted'>[istream.unformatted]</a>, paragraph 1).</p></div></div><div class='para' id='istream.unformatted-3'><div class='marginalizedparent'><a class='marginalized' href='#istream.unformatted-3'>3</a></div><div class='itemdescr'><p ><i>Returns:</i>
+input function (as described above).</p></div></div><div class='para' id='istream.unformatted-3'><div class='marginalizedparent'><a class='marginalized' href='#istream.unformatted-3'>3</a></div><div class='itemdescr'><p ><i>Returns:</i>
 The number of characters
 extracted by the last unformatted input member function called for the object.
 </p></div></div><p ><span class='indexparent'><a class='index' id='get,basic_istream'></a></span><span class='indexparent'><a class='index' id='basic_istream,get'></a></span><code class='itemdecl'>
 int_type get();
 </code></p><div class='itemdescr'></div><div class='para' id='istream.unformatted-4'><div class='marginalizedparent'><a class='marginalized' href='#istream.unformatted-4'>4</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Behaves as an unformatted input function
-(as described in <a href='istream.unformatted'>[istream.unformatted]</a>, paragraph 1).
+(as described above).
 After constructing a sentry object, extracts
 a character <span class='texttt'>c</span>, if one is available.
 Otherwise, the function calls
@@ -578,7 +577,7 @@ otherwise
 basic_istream&lt;charT, traits&gt;&amp; get(char_type&amp; c);
 </code></p><div class='itemdescr'></div><div class='para' id='istream.unformatted-6'><div class='marginalizedparent'><a class='marginalized' href='#istream.unformatted-6'>6</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Behaves as an unformatted input function
-(as described in <a href='istream.unformatted'>[istream.unformatted]</a>, paragraph 1).
+(as described above).
 After constructing a sentry object, extracts
 a character, if one is available, and assigns it to <span class='texttt'>c</span>.<a class='footnotenum' href='#footnote-314'>314</a>
 Otherwise, the function calls
@@ -591,7 +590,7 @@ basic_istream&lt;charT, traits&gt;&amp; get(char_type* s, streamsize n,
                                   char_type delim);
 </code></p><div class='itemdescr'></div><div class='para' id='istream.unformatted-8'><div class='marginalizedparent'><a class='marginalized' href='#istream.unformatted-8'>8</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Behaves as an unformatted input function
-(as described in <a href='istream.unformatted'>[istream.unformatted]</a>, paragraph 1).
+(as described above).
 After constructing a sentry object, extracts
 characters and stores them
 into successive locations of an array whose first element is designated by
@@ -624,7 +623,7 @@ basic_istream&lt;charT, traits&gt;&amp; get(basic_streambuf&lt;char_type, traits
                                   char_type delim);
 </code></p><div class='itemdescr'></div><div class='para' id='istream.unformatted-13'><div class='marginalizedparent'><a class='marginalized' href='#istream.unformatted-13'>13</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Behaves as an unformatted input function
-(as described in <a href='istream.unformatted'>[istream.unformatted]</a>, paragraph 1).
+(as described above).
 After constructing a sentry object, extracts
 characters and inserts them
 in the output sequence controlled by
@@ -654,7 +653,7 @@ basic_istream&lt;charT, traits&gt;&amp; getline(char_type* s, streamsize n,
                                       char_type delim);
 </code></p><div class='itemdescr'></div><div class='para' id='istream.unformatted-18'><div class='marginalizedparent'><a class='marginalized' href='#istream.unformatted-18'>18</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Behaves as an unformatted input function
-(as described in <a href='istream.unformatted'>[istream.unformatted]</a>, paragraph 1).
+(as described above).
 After constructing a sentry object, extracts
 characters and stores them
 into successive locations of an array whose first element is designated by
@@ -712,7 +711,7 @@ basic_istream&lt;charT, traits&gt;&amp;
     ignore(streamsize n = 1, int_type delim = traits::eof());
 </code></p><div class='itemdescr'></div><div class='para' id='istream.unformatted-25'><div class='marginalizedparent'><a class='marginalized' href='#istream.unformatted-25'>25</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Behaves as an unformatted input function
-(as described in <a href='istream.unformatted'>[istream.unformatted]</a>, paragraph 1).
+(as described above).
 After constructing a sentry object, extracts
 characters and discards them.
 Characters are extracted until any of the following occurs:
@@ -735,7 +734,7 @@ The last condition will never occur if
 int_type peek();
 </code></p><div class='itemdescr'></div><div class='para' id='istream.unformatted-28'><div class='marginalizedparent'><a class='marginalized' href='#istream.unformatted-28'>28</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Behaves as an unformatted input function
-(as described in <a href='istream.unformatted'>[istream.unformatted]</a>, paragraph 1).
+(as described above).
 After constructing a sentry object, reads but does not extract
 the current input character.</p></div></div><div class='para' id='istream.unformatted-29'><div class='marginalizedparent'><a class='marginalized' href='#istream.unformatted-29'>29</a></div><div class='itemdescr'><p ><i>Returns:</i>
 <span class='texttt'>traits::eof()</span>
@@ -748,7 +747,7 @@ Otherwise, returns
 </p></div></div><p ><span class='indexparent'><a class='index' id='read,basic_istream'></a></span><span class='indexparent'><a class='index' id='basic_istream,read'></a></span><code class='itemdecl'>
 basic_istream&lt;charT, traits&gt;&amp; read(char_type* s, streamsize n);
 </code></p><div class='itemdescr'></div><div class='para' id='istream.unformatted-30'><div class='marginalizedparent'><a class='marginalized' href='#istream.unformatted-30'>30</a></div><div class='itemdescr'><p ><i>Effects:</i>
-Behaves as an unformatted input function (as described in <a href='istream.unformatted'>[istream.unformatted]</a>, paragraph 1).
+Behaves as an unformatted input function (as described above).
 After constructing
 a sentry object, if
 <span class='texttt'>!good()</span>
@@ -771,7 +770,7 @@ which may throw
 </p></div></div><p ><span class='indexparent'><a class='index' id='readsome,basic_istream'></a></span><span class='indexparent'><a class='index' id='basic_istream,readsome'></a></span><code class='itemdecl'>
 streamsize readsome(char_type* s, streamsize n);
 </code></p><div class='itemdescr'></div><div class='para' id='istream.unformatted-32'><div class='marginalizedparent'><a class='marginalized' href='#istream.unformatted-32'>32</a></div><div class='itemdescr'><p ><i>Effects:</i>
-Behaves as an unformatted input function (as described in <a href='istream.unformatted'>[istream.unformatted]</a>, paragraph 1).
+Behaves as an unformatted input function (as described above).
 After constructing
 a sentry object, if
 <span class='texttt'>!good()</span>
@@ -801,8 +800,7 @@ The number of characters extracted.
 </p></div></div><p ><span class='indexparent'><a class='index' id='putback,basic_istream'></a></span><span class='indexparent'><a class='index' id='basic_istream,putback'></a></span><code class='itemdecl'>
 basic_istream&lt;charT, traits&gt;&amp; putback(char_type c);
 </code></p><div class='itemdescr'></div><div class='para' id='istream.unformatted-34'><div class='marginalizedparent'><a class='marginalized' href='#istream.unformatted-34'>34</a></div><div class='itemdescr'><p ><i>Effects:</i>
-Behaves as an unformatted input function (as described in <a href='istream.unformatted'>[istream.unformatted]</a>, paragraph
-1), except that the function first clears <span class='texttt'>eofbit</span>.
+Behaves as an unformatted input function (as described above), except that the function first clears <span class='texttt'>eofbit</span>.
 After constructing
 a sentry object, if
 <span class='texttt'>!good()</span>
@@ -834,8 +832,7 @@ is 0.
 </p></div></div><p ><span class='indexparent'><a class='index' id='unget,basic_istream'></a></span><span class='indexparent'><a class='index' id='basic_istream,unget'></a></span><code class='itemdecl'>
 basic_istream&lt;charT, traits&gt;&amp; unget();
 </code></p><div class='itemdescr'></div><div class='para' id='istream.unformatted-36'><div class='marginalizedparent'><a class='marginalized' href='#istream.unformatted-36'>36</a></div><div class='itemdescr'><p ><i>Effects:</i>
-Behaves as an unformatted input function (as described in <a href='istream.unformatted'>[istream.unformatted]</a>, paragraph
-1), except that the function first clears <span class='texttt'>eofbit</span>.
+Behaves as an unformatted input function (as described above), except that the function first clears <span class='texttt'>eofbit</span>.
 After constructing
 a sentry object, if
 <span class='texttt'>!good()</span>
@@ -867,7 +864,7 @@ is 0.
 </p></div></div><p ><span class='indexparent'><a class='index' id='sync,basic_istream'></a></span><span class='indexparent'><a class='index' id='basic_istream,sync'></a></span><code class='itemdecl'>
 int sync();
 </code></p><div class='itemdescr'></div><div class='para' id='istream.unformatted-38'><div class='marginalizedparent'><a class='marginalized' href='#istream.unformatted-38'>38</a></div><div class='itemdescr'><p ><i>Effects:</i>
-Behaves as an unformatted input function (as described in <a href='istream.unformatted'>[istream.unformatted]</a>, paragraph 1), except that it does not
+Behaves as an unformatted input function (as described above), except that it does not
 count the number of characters extracted and does not affect the
 value returned by subsequent calls to
 <span class='texttt'>gcount()</span>.
@@ -888,7 +885,7 @@ Otherwise, returns zero.
 </p></div></div><p ><span class='indexparent'><a class='index' id='tellg,basic_istream'></a></span><span class='indexparent'><a class='index' id='basic_istream,tellg'></a></span><code class='itemdecl'>
 pos_type tellg();
 </code></p><div class='itemdescr'></div><div class='para' id='istream.unformatted-39'><div class='marginalizedparent'><a class='marginalized' href='#istream.unformatted-39'>39</a></div><div class='itemdescr'><p ><i>Effects:</i>
-Behaves as an unformatted input function (as described in <a href='istream.unformatted'>[istream.unformatted]</a>, paragraph 1), except that it does not count
+Behaves as an unformatted input function (as described above), except that it does not count
 the number of characters extracted and does not affect the value
 returned by subsequent calls to
 <span class='texttt'>gcount()</span>.</p></div></div><div class='para' id='istream.unformatted-40'><div class='marginalizedparent'><a class='marginalized' href='#istream.unformatted-40'>40</a></div><div class='itemdescr'><p ><i>Returns:</i>
@@ -902,7 +899,7 @@ Otherwise, returns
 </p></div></div><p ><span class='indexparent'><a class='index' id='seekg,basic_istream'></a></span><span class='indexparent'><a class='index' id='basic_istream,seekg'></a></span><code class='itemdecl'>
 basic_istream&lt;charT, traits&gt;&amp; seekg(pos_type pos);
 </code></p><div class='itemdescr'></div><div class='para' id='istream.unformatted-41'><div class='marginalizedparent'><a class='marginalized' href='#istream.unformatted-41'>41</a></div><div class='itemdescr'><p ><i>Effects:</i>
-Behaves as an unformatted input function (as described in <a href='istream.unformatted'>[istream.unformatted]</a>, paragraph 1), except that
+Behaves as an unformatted input function (as described above), except that
 the function first clears <span class='texttt'>eofbit</span>,
 it does not count
 the number of characters extracted, and it does not affect the value
@@ -920,8 +917,7 @@ In case of failure, the function calls
 </p></div></div><p ><span class='indexparent'><a class='index' id='seekg,basic_istream'></a></span><span class='indexparent'><a class='index' id='basic_istream,seekg'></a></span><code class='itemdecl'>
 basic_istream&lt;charT, traits&gt;&amp; seekg(off_type off, ios_base::seekdir dir);
 </code></p><div class='itemdescr'></div><div class='para' id='istream.unformatted-43'><div class='marginalizedparent'><a class='marginalized' href='#istream.unformatted-43'>43</a></div><div class='itemdescr'><p ><i>Effects:</i>
-Behaves as an unformatted input function (as described in <a href='istream.unformatted'>[istream.unformatted]</a>, paragraph
-1), except that the function first clears <span class='texttt'>eofbit</span>,
+Behaves as an unformatted input function (as described above), except that the function first clears <span class='texttt'>eofbit</span>,
 does not count the number of characters extracted, and
 does not affect the value returned by subsequent calls to <span class='texttt'>gcount()</span>.
 After constructing a sentry object, if
@@ -960,8 +956,7 @@ and
 template &lt;class charT, class traits&gt;
   basic_istream&lt;charT, traits&gt;&amp; ws(basic_istream&lt;charT, traits&gt;&amp; is);
 </code></p><div class='itemdescr'></div><div class='para' id='istream.manip-1'><div class='marginalizedparent'><a class='marginalized' href='#istream.manip-1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i>
-Behaves as an unformatted input function (as described in <a href='istream.unformatted'>[istream.unformatted]</a>,
-paragraph 1), except that it does not count the number of characters extracted and
+Behaves as an unformatted input function (<a href='istream.unformatted'>[istream.unformatted]</a>), except that it does not count the number of characters extracted and
 does not affect the value returned by subsequent calls to is.gcount(). After
 constructing a sentry object extracts characters as long as the next available
 character <span class='texttt'>c</span> is whitespace or until there are no more characters in the sequence.
