--- a/istream.extractors.html
+++ b/istream.extractors.html
@@ -98,8 +98,7 @@ Otherwise, the function calls
 basic_istream&lt;charT, traits&gt;&amp; operator&gt;&gt;
   (basic_streambuf&lt;charT, traits&gt;* sb);
 </code></p><div class='itemdescr'></div><div class='para' id='14'><div class='marginalizedparent'><a class='marginalized' href='#14'>14</a></div><div class='itemdescr'><p ><i>Effects:</i>
-Behaves as an unformatted input function (as described
-in <a href='istream.unformatted'>[istream.unformatted]</a>, paragraph 1).
+Behaves as an unformatted input function (<a href='istream.unformatted'>[istream.unformatted]</a>).
 If <span class='texttt'>sb</span> is null, calls
 <span class='texttt'>setstate(failbit)</span>,
 which may throw
