--- a/istream.manip.html
+++ b/istream.manip.html
@@ -2,8 +2,7 @@
 template &lt;class charT, class traits&gt;
   basic_istream&lt;charT, traits&gt;&amp; ws(basic_istream&lt;charT, traits&gt;&amp; is);
 </code></p><div class='itemdescr'></div><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i>
-Behaves as an unformatted input function (as described in <a href='istream.unformatted'>[istream.unformatted]</a>,
-paragraph 1), except that it does not count the number of characters extracted and
+Behaves as an unformatted input function (<a href='istream.unformatted'>[istream.unformatted]</a>), except that it does not count the number of characters extracted and
 does not affect the value returned by subsequent calls to is.gcount(). After
 constructing a sentry object extracts characters as long as the next available
 character <span class='texttt'>c</span> is whitespace or until there are no more characters in the sequence.
