--- a/ostream.formatted.html
+++ b/ostream.formatted.html
@@ -174,7 +174,7 @@ behave as a formatted output function (as described in <a href='ostream.formatte
 basic_ostream&lt;charT, traits&gt;&amp; operator&lt;&lt;
     (basic_streambuf&lt;charT, traits&gt;* sb);
 </code></p><div class='itemdescr'></div><div class='para' id='ostream.inserters-7'><div class='marginalizedparent'><a class='marginalized' href='#ostream.inserters-7'>7</a></div><div class='itemdescr'><p ><i>Effects:</i>
-Behaves as an unformatted output function (as described in <a href='ostream.unformatted'>[ostream.unformatted]</a>, paragraph 1).
+Behaves as an unformatted output function (<a href='ostream.unformatted'>[ostream.unformatted]</a>).
 After the sentry object is
 constructed, if
 <span class='texttt'>sb</span> is null calls
