--- a/output.streams.html
+++ b/output.streams.html
@@ -432,7 +432,7 @@ behave as a formatted output function (as described in <a href='ostream.formatte
 basic_ostream&lt;charT, traits&gt;&amp; operator&lt;&lt;
     (basic_streambuf&lt;charT, traits&gt;* sb);
 </code></p><div class='itemdescr'></div><div class='para' id='ostream.inserters-7'><div class='marginalizedparent'><a class='marginalized' href='#ostream.inserters-7'>7</a></div><div class='itemdescr'><p ><i>Effects:</i>
-Behaves as an unformatted output function (as described in <a href='ostream.unformatted'>[ostream.unformatted]</a>, paragraph 1).
+Behaves as an unformatted output function (<a href='ostream.unformatted'>[ostream.unformatted]</a>).
 After the sentry object is
 constructed, if
 <span class='texttt'>sb</span> is null calls
@@ -562,7 +562,7 @@ sentry object, then, if no exception was thrown, returning the value
 specified for the unformatted output function.</p><p ><span class='indexparent'><a class='index' id='put,basic_ostream'></a></span><span class='indexparent'><a class='index' id='basic_ostream,put'></a></span><code class='itemdecl'>
 basic_ostream&lt;charT, traits&gt;&amp; put(char_type c);
 </code></p></div><div class='itemdescr'></div><div class='para' id='ostream.unformatted-2'><div class='marginalizedparent'><a class='marginalized' href='#ostream.unformatted-2'>2</a></div><div class='itemdescr'><p ><i>Effects:</i>
-Behaves as an unformatted output function (as described in <a href='ostream.unformatted'>[ostream.unformatted]</a>, paragraph 1).
+Behaves as an unformatted output function (as described above).
 After constructing a sentry
 object, inserts
 the character <span class='texttt'>c</span>, if possible.<a class='footnotenum' href='#footnote-327'>327</a></p></div></div><div class='para' id='ostream.unformatted-3'><div class='marginalizedparent'><a class='marginalized' href='#ostream.unformatted-3'>3</a></div><div class='itemdescr'><p >Otherwise, calls
@@ -573,7 +573,7 @@ the character <span class='texttt'>c</span>, if possible.<a class='footnotenum' 
 </p></div></div><p ><span class='indexparent'><a class='index' id='write,basic_ostream'></a></span><span class='indexparent'><a class='index' id='basic_ostream,write'></a></span><code class='itemdecl'>
 basic_ostream&amp; write(const char_type* s, streamsize n);
 </code></p><div class='itemdescr'></div><div class='para' id='ostream.unformatted-5'><div class='marginalizedparent'><a class='marginalized' href='#ostream.unformatted-5'>5</a></div><div class='itemdescr'><p ><i>Effects:</i>
-Behaves as an unformatted output function (as described in <a href='ostream.unformatted'>[ostream.unformatted]</a>, paragraph 1).  After constructing a sentry
+Behaves as an unformatted output function (as described above).  After constructing a sentry
 object, obtains
 characters to insert from
 successive locations of an array whose first element is designated by
@@ -589,7 +589,7 @@ which may throw
 <span class='texttt'>*this</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='flush,basic_ostream'></a></span><span class='indexparent'><a class='index' id='basic_ostream,flush'></a></span><code class='itemdecl'>
 basic_ostream&amp; flush();
-</code></p><div class='itemdescr'></div><div class='para' id='ostream.unformatted-7'><div class='marginalizedparent'><a class='marginalized' href='#ostream.unformatted-7'>7</a></div><div class='itemdescr'><p ><i>Effects:</i> Behaves as an unformatted output function (as described in <a href='ostream.unformatted'>[ostream.unformatted]</a>, paragraph 1).
+</code></p><div class='itemdescr'></div><div class='para' id='ostream.unformatted-7'><div class='marginalizedparent'><a class='marginalized' href='#ostream.unformatted-7'>7</a></div><div class='itemdescr'><p ><i>Effects:</i> Behaves as an unformatted output function (as described above).
 If
 <span class='texttt'>rdbuf()</span>
 is not a null pointer,
