--- a/quoted.manip.html
+++ b/quoted.manip.html
@@ -34,8 +34,8 @@ template &lt;class charT, class traits, class Allocator&gt;
 and <span class='texttt'>traits</span>, respectively, then the expression
 <span class='texttt'>in &gt;&gt; quoted(s, delim, escape)</span> behaves as if it extracts the following
 characters from <span class='texttt'>in</span> using
-<span class='texttt'>basic_istream::operator&gt;&gt;</span> (<a href='istream.extractors'>[istream.extractors]</a>)
-which may throw <span class='texttt'>ios_base::failure</span><span class='discretionary'></span> (<a href='./ios::failure'>[ios::failure]</a>):
+<span class='texttt'>operator&gt;&gt;(basic_istream&lt;charT, traits&gt;&amp;, charT&amp;)</span> (<a href='istream.extractors'>[istream.extractors]</a>)
+which may throw <span class='texttt'>ios_base::failure</span> (<a href='./ios::failure'>[ios::failure]</a>):
 </p><ul ><li ><p >If the first character extracted is equal to <span class='texttt'>delim</span>, as
 determined by <span class='texttt'>traits_type::eq</span>, then:
 </p><ul ><li ><p >Turn off the <span class='texttt'>skipws</span> flag.
