--- a/stringbuf.html
+++ b/stringbuf.html
@@ -291,7 +291,7 @@ Table <a href='#tab:iostreams.newoff.values'>[tab:iostreams.newoff.values]</a>.<
  the high mark pointer minus the beginning pointer (<span class='texttt'>high_mark - xbeg</span>).   </td></tr></table></div></div></div><div class='para' id='virtuals-11'><div class='marginalizedparent'><a class='marginalized' href='#virtuals-11'>11</a></div><div class='itemdescr'><p >If
 <span class='texttt'>(newoff + off) &lt; 0</span>,
 or if <span class='texttt'>newoff + off</span> refers to an uninitialized
-character (as defined in <a href='stringbuf.members'>[stringbuf.members]</a> paragraph 1),
+character (<a href='stringbuf.members'>[stringbuf.members]</a>),
 the positioning operation fails.
 Otherwise, the function assigns
 <span class='texttt'>xbeg + newoff + off</span>
