--- a/reverse.iterators.html
+++ b/reverse.iterators.html
@@ -161,30 +161,25 @@ reverse_iterator tmp = *this;
 ++current;
 return tmp;
 </pre></div></div></div><div id='reverse.iter.op+'><h4 ><a class='secnum' href='#reverse.iter.op+' style='min-width:133pt'>24.5.1.3.8</a> <span class='texttt'>operator+</span> <a class='abbr_ref' href='reverse.iter.op+'>[reverse.iter.op+]</a></h4><p ><span class='indexparent'><a class='index' id='operator+,reverse_iterator'></a></span><span class='indexparent'><a class='index' id='reverse_iterator,operator+'></a></span><code class='itemdecl'>
-constexpr reverse_iterator
-operator+(typename reverse_iterator&lt;Iterator&gt;::difference_type n) const;
+constexpr reverse_iterator operator+(difference_type n) const;
 </code></p><div class='itemdescr'></div><div class='para' id='reverse.iter.op+-1'><div class='marginalizedparent'><a class='marginalized' href='#reverse.iter.op+-1'>1</a></div><div class='itemdescr'><p ><i>Returns:</i>
 <span class='texttt'>reverse_iterator(current-n)</span>.
 </p></div></div></div><div id='reverse.iter.op+='><h4 ><a class='secnum' href='#reverse.iter.op+=' style='min-width:133pt'>24.5.1.3.9</a> <span class='texttt'>operator+=</span> <a class='abbr_ref' href='reverse.iter.op+='>[reverse.iter.op+=]</a></h4><p ><span class='indexparent'><a class='index' id='operator+=,reverse_iterator'></a></span><span class='indexparent'><a class='index' id='reverse_iterator,operator+='></a></span><code class='itemdecl'>
-constexpr reverse_iterator&amp;
-operator+=(typename reverse_iterator&lt;Iterator&gt;::difference_type n);
+constexpr reverse_iterator&amp; operator+=(difference_type n);
 </code></p><div class='itemdescr'></div><div class='para' id='reverse.iter.op+=-1'><div class='marginalizedparent'><a class='marginalized' href='#reverse.iter.op+=-1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i>
 As if by: <span class='texttt'>current -= n;</span></p></div></div><div class='para' id='reverse.iter.op+=-2'><div class='marginalizedparent'><a class='marginalized' href='#reverse.iter.op+=-2'>2</a></div><div class='itemdescr'><p ><i>Returns:</i>
 <span class='texttt'>*this</span>.
 </p></div></div></div><div id='reverse.iter.op-'><h4 ><a class='secnum' href='#reverse.iter.op-' style='min-width:133pt'>24.5.1.3.10</a> <span class='texttt'>operator-</span> <a class='abbr_ref' href='reverse.iter.op-'>[reverse.iter.op-]</a></h4><p ><span class='indexparent'><a class='index' id='operator-,reverse_iterator'></a></span><span class='indexparent'><a class='index' id='reverse_iterator,operator-'></a></span><code class='itemdecl'>
-constexpr reverse_iterator
-operator-(typename reverse_iterator&lt;Iterator&gt;::difference_type n) const;
+constexpr reverse_iterator operator-(difference_type n) const;
 </code></p><div class='itemdescr'></div><div class='para' id='reverse.iter.op--1'><div class='marginalizedparent'><a class='marginalized' href='#reverse.iter.op--1'>1</a></div><div class='itemdescr'><p ><i>Returns:</i>
 <span class='texttt'>reverse_iterator(current+n)</span>.
 </p></div></div></div><div id='reverse.iter.op-='><h4 ><a class='secnum' href='#reverse.iter.op-=' style='min-width:133pt'>24.5.1.3.11</a> <span class='texttt'>operator-=</span> <a class='abbr_ref' href='reverse.iter.op-='>[reverse.iter.op-=]</a></h4><p ><span class='indexparent'><a class='index' id='operator-=,reverse_iterator'></a></span><span class='indexparent'><a class='index' id='reverse_iterator,operator-='></a></span><code class='itemdecl'>
-constexpr reverse_iterator&amp;
-operator-=(typename reverse_iterator&lt;Iterator&gt;::difference_type n);
+constexpr reverse_iterator&amp; operator-=(difference_type n);
 </code></p><div class='itemdescr'></div><div class='para' id='reverse.iter.op-=-1'><div class='marginalizedparent'><a class='marginalized' href='#reverse.iter.op-=-1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i>
 As if by: <span class='texttt'>current += n;</span></p></div></div><div class='para' id='reverse.iter.op-=-2'><div class='marginalizedparent'><a class='marginalized' href='#reverse.iter.op-=-2'>2</a></div><div class='itemdescr'><p ><i>Returns:</i>
 <span class='texttt'>*this</span>.
 </p></div></div></div><div id='reverse.iter.opindex'><h4 ><a class='secnum' href='#reverse.iter.opindex' style='min-width:133pt'>24.5.1.3.12</a> <span class='texttt'>operator[]</span> <a class='abbr_ref' href='reverse.iter.opindex'>[reverse.iter.opindex]</a></h4><p ><span class='indexparent'><a class='index' id='operator[],reverse_iterator'></a></span><span class='indexparent'><a class='index' id='reverse_iterator,operator[]'></a></span><code class='itemdecl'>
-constexpr <i><span class='texttt'>unspecified</span></i> operator[](
-    typename reverse_iterator&lt;Iterator&gt;::difference_type n) const;
+constexpr <i><span class='texttt'>unspecified</span></i> operator[](difference_type n) const;
 </code></p><div class='itemdescr'></div><div class='para' id='reverse.iter.opindex-1'><div class='marginalizedparent'><a class='marginalized' href='#reverse.iter.opindex-1'>1</a></div><div class='itemdescr'><p ><i>Returns:</i>
 <span class='texttt'>current[-n-1]</span>.
 </p></div></div></div><div id='reverse.iter.op=='><h4 ><a class='secnum' href='#reverse.iter.op==' style='min-width:133pt'>24.5.1.3.13</a> <span class='texttt'>operator==</span> <a class='abbr_ref' href='reverse.iter.op=='>[reverse.iter.op==]</a></h4><p ><span class='indexparent'><a class='index' id='operator==,reverse_iterator'></a></span><span class='indexparent'><a class='index' id='reverse_iterator,operator=='></a></span><code class='itemdecl'>
