--- a/conv.html
+++ b/conv.html
@@ -29,7 +29,7 @@ See <a href='dcl.init'>[dcl.init]</a>, <a href='dcl.init.ref'>[dcl.init.ref]</a>
 declaration <span class='texttt'>T t=e;</span> is well-formed, for some invented temporary
 variable <span class='texttt'>t</span> (<a href='dcl.init'>[dcl.init]</a>).</p></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p >Certain language constructs require that an expression be converted to a Boolean
 value. An expression <span class='texttt'>e</span> appearing in such a context is said to be
-<span class='indexparent'><a class='index' id='conversion,contextual_to_bool'></a></span><a class='hidden_link' href='#def:contextually_converted_to_%3cspan_class=&#39;texttt&#39;%3ebool%3c/span%3e' id='def:contextually_converted_to_<span_class='texttt'>bool</span>'><i>contextually converted to <span class='texttt'>bool</span></i></a> and is well-formed if and only if
+<span class='indexparent'><a class='index' id='conversion,contextual_to_bool'></a></span><a class='hidden_link' href='#def:contextually_converted_to_bool' id='def:contextually_converted_to_bool'><i>contextually converted to <span class='texttt'>bool</span></i></a> and is well-formed if and only if
 the declaration <span class='texttt'>bool t(e);</span> is well-formed, for some invented temporary
 variable <span class='texttt'>t</span> (<a href='dcl.init'>[dcl.init]</a>).</p></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><p >Certain language constructs require conversion to a value having
 one of a specified set of types appropriate to the construct. An
