--- a/utilities.html
+++ b/utilities.html
@@ -4737,7 +4737,7 @@ if (shared_ptr&lt;X&gt; px = dynamic_pointer_cast&lt;X&gt;(py)) {
 access and modify only the <span class='texttt'>shared_ptr</span> and <span class='texttt'>weak_ptr</span> objects
 themselves and not objects they refer to. Changes in <span class='texttt'>use_count()</span> do not
 reflect modifications that can introduce data races.</p></div><div id='util.smartptr.shared.const'><h4 ><a class='secnum' href='#util.smartptr.shared.const' style='min-width:133pt'>20.11.2.2.1</a> <span class='texttt'>shared_ptr</span> constructors <a class='abbr_ref' href='util.smartptr.shared.const'>[util.smartptr.shared.const]</a></h4><div class='para' id='util.smartptr.shared.const-1'><div class='marginalizedparent'><a class='marginalized' href='#util.smartptr.shared.const-1'>1</a></div><p >In the constructor definitions below,
-<a class='hidden_link' href='#def:enables_%3cspan_class=&#39;texttt&#39;%3eshared_from_this%3c/span%3e_with_%3cspan_class=&#39;texttt&#39;%3ep%3c/span%3e' id='def:enables_<span_class='texttt'>shared_from_this</span>_with_<span_class='texttt'>p</span>'><i>enables <span class='texttt'>shared_from_this</span> with <span class='texttt'>p</span></i></a>,
+<a class='hidden_link' href='#def:enables_shared_from_this_with_p' id='def:enables_shared_from_this_with_p'><i>enables <span class='texttt'>shared_from_this</span> with <span class='texttt'>p</span></i></a>,
 for a pointer <span class='texttt'>p</span> of type <span class='texttt'>Y*</span>,
 means that if <span class='texttt'>Y</span> has an unambiguous and accessible base class
 that is a specialization of <span class='texttt'>enable_shared_from_this</span> (<a href='util.smartptr.enab'>[util.smartptr.enab]</a>),
